# PNAD

./: .editorconfig  .env  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Corresp_var_SNIPC_PNADC.doc  GEMINI.md  INPUT_SNIPC.txt  INPUT_SNIPC_PNADC.sas.txt  LICENSE  PNADC_012025.txt  PNADC_022025.txt  README.md  SECURITY.md  Variaveis_PNADC_Trimestral.xls  dicionario_PNADC_microdados_trimestral.xls  pyproject.toml  requirements.txt  ~$rresp_var_SNIPC_PNADC.doc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
17/ab11ca5fd0/: metadata.json
30/3f326d3438/: metadata.json
3a/a7b11c4821/: metadata.json
3b/749776c8d5/: metadata.json
4d/d9f380b270/: metadata.json
77/9c81d3007c/: metadata.json
7d/3d53de8e6a/: metadata.json
82/ad91d204f1/: metadata.json
8d/c86fe6e812/: metadata.json
96/80d675efe7/: metadata.json
analysis/: apresentacao_composicao_renda.html  comparacao_trimestral_anual.py  composicao_renda_charts.py
c6/e9ec90735a/: metadata.json
docs/: CNAME  DASHBOARD_V2_SPEC.md  artigo_en.html  artigo_en.md  artigo_nexus_btg_150626.html  artigo_nexus_btg_150626.md  artigo_pt.html  artigo_pt.md  artigo_quaest_100626.docx  artigo_quaest_100626.html  artigo_quaest_100626.md  atlas_intel_180526.html  atlasintel_260626.html  atlasintel_260626_thread.html  build_articles.py  build_hero.py  build_index.py  build_proposta.py  datafolha_062026.html  datafolha_062026_thread.html  datafolha_090526.html  index.html  index.template.html  margens_visuais.html  nexus_btg_0726.html  nexus_btg_0726_slides.html  nexus_btg_0726_thread.html  nexus_btg_150626.html  nexus_btg_150626_thread.html  pnad.html  proposta.html  quaest_0726.html  quaest_0726_slides.html  quaest_0726_thread.html  quaest_100626.html  social.html  x_thread.html
docs/assets/: artigo.css  index.css  nexus_btg_0726.css  nexus_btg_0726.js  nexus_btg_0726_data.json  proposta.css  quaest_0726.css  quaest_0726.js  quaest_0726_campo.json  quaest_0726_campo_fragment.html  quaest_0726_campo_notes.md  quaest_0726_candeloro.json  quaest_0726_candeloro_fragment.html  quaest_0726_candeloro_notes.md  quaest_0726_data.json  quaest_0726_dripfeed.json  quaest_0726_dripfeed_fragment.html  quaest_0726_dripfeed_notes.md  quaest_0726_favelas.json  (+37 more)
notebooks/: PNADC_exploration.ipynb  PNADC_exploration_backup.ipynb  PNADC_exploration_unordered_backup.ipynb
samples/: ipca_sample.csv  sample_pnadc.txt
scripts/: __init__.py  build_artigo_docx.js  fetch_ipca.py  find-duplicate-cells.py  layout_sas.py  nexus-btg-audit.py  npv_deflators.py  parse_pnadc.py  patch_notebook_npv.py  pnad.py  pnadc_cli.py  quaest-favela-audit.py  quaest-july-audit.py  quaest-territory-audit.py  tse-electorate-profile.py  validate_income.py
tests/: test_cli_core.py  test_dashboard.py  test_dashboard_anual.py  test_default_keep.py  test_ibge_sync.py  test_layout_examples.py  test_layout_sas.py  test_npv_deflators.py  test_parser.py  test_pnad.py  test_quaest_territory_audit.py  test_query.py  test_renda_por_faixa_sm.py  test_validate_income.py
(+86 files in other folders)
